Added team logo (use this file)

--- a/Welcome Page/welcomePage.html
+++ b/Welcome Page/welcomePage.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Welcome</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
 
 
         <div class="welcome-section content-hidden">
+          <p class='aether'> AETHER </p>
             <div class="content-wrap">
                 <ul class="fly-in-text">
                     <li>N</li>
@@ -35,7 +36,7 @@
               <div class="star"></div>
               <div class="star"></div>
             </div>
-            
+
 
 
             <div class="border"></div>
